--- a/ansible/roles/common/tasks/main.yml
+++ b/ansible/roles/common/tasks/main.yml
@@ -2,12 +2,30 @@
   hostname:
     name: "{{ inventory_hostname }}"
 
+- name: Disable SELinux
+  selinux:
+    state: disabled
+
+- name: Copy kubernetes repo information
+  copy:
+    src: kubernetes.repo
+    dest: /etc/yum.repos.d/kubernetes.repo
+
 - name: Install list of packages
   yum:
     name:
       - ntp
+      - yum-utils
       - docker
+        #- kubelet
+        #- kubeadm
+        #- kubectl
+        #    disable_excludes: kubernetes
     state: present
+
+- name: Install Kubernetes
+  command: yum install -y kubelet kubeadm kubectl --disableexcludes=kubernetes
+
 
 - name: ntpd running
   service:
